--- a/detalles.html
+++ b/detalles.html
@@ -86,7 +86,7 @@
     <script>
             // Crear el script para cargar la API de Google Maps dinámicamente
             const script = document.createElement('script');
-            script.src = `https://maps.googleapis.com/maps/api/js?key=${config.googleMapsApiKey}&callback=initMap`;
+            script.src = `https://maps.googleapis.com/maps/api/js?key=AIzaSyDrBBcgG2u75UyA2MuqZa9_YyMf1jqZbpo&callback=initMap`;
             document.head.appendChild(script);  // Añadir el script al encabezado del documento
         </script>
 
